--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "json-server": "^0.17.2",
+    "lodash": "^4.17.21",
     "netlify": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.191"
   }
 }
