--- a/package.json
+++ b/package.json
@@ -3,27 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@netlify/functions": "^1.4.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.12",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "json-server": "^0.17.2",
+    "@radix-ui/themes": "^1.0.0",
     "lodash": "^4.17.21",
-    "netlify": "^13.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "start:frontend": "react-scripts start",
     "start:backend": "npx json-server --watch db.json --port 8000",
-    "build": "react-scripts build",
+    "build": "env GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -46,6 +34,17 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.191"
+    "@types/lodash": "^4.14.191",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.12",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "web-vitals": "^2.1.4",
+    "netlify": "^13.1.2",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5"
   }
 }
